Fix play button on small screens

--- a/resources/assets/sass/videos.scss
+++ b/resources/assets/sass/videos.scss
@@ -10,9 +10,13 @@
     width: 100%;
     height: 100%;
     top: 0;
-    display: flex;
+    display: none;
     align-items: center;
     justify-content: center;
+    @media #{$small-up} {
+      display: flex;
+      z-index: -1;
+    }
   }
   .play-button {
     display: none;
